分级嵌套命令行